--- a/src/global.css
+++ b/src/global.css
@@ -6,6 +6,10 @@ body,
 
 html {
   font-size: 50px;
+  -webkit-tap-highlight-color: transparent;
+  height: 100%;
+  min-width: 320px;
+  overflow-x: hidden;
 }
 
 body {
@@ -24,4 +28,18 @@ body {
 .fade-enter.fade-enter-active {
   opacity: 1;
   transition: opacity 250ms ease-in;
+}
+
+img {
+  vertical-align: middle;
+  border: 0;
+}
+
+
+*, *::before, *::after {
+  box-sizing: content-box;
+}
+
+a{
+  text-decoration: none;
 }
