--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="//p0.meituan.net/travelcube/ba8ffd9e91ba069f1d6cd352cd5b9e93803.png" type="image/x-icon">
     <title>美团项目</title>
 </head>
 <body>
