--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="//p0.meituan.net/travelcube/ba8ffd9e91ba069f1d6cd352cd5b9e93803.png" type="image/x-icon">
     <title>美团项目</title>
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1634433_zzgw9bppit.css">
 </head>
 <body>
     <div id="root"></div>
