--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -59,13 +59,13 @@ em {
   margin-top: -0.07rem;
 }
 
-.singleLine{
-  font-size: .26rem;
-    box-sizing: border-box;
-    width: 100%;
-    color: #999999;
-    padding-left: 0rem;
-    display: contents;
+.singleLine {
+  font-size: 0.26rem;
+  box-sizing: border-box;
+  width: 100%;
+  color: #999999;
+  padding-left: 0rem;
+  display: contents;
 }
 
 .icn_search {
@@ -90,17 +90,17 @@ em {
   opacity: 0.9;
   background: #ffffff;
   border-radius: 0.18rem;
-  width: 5rem;
+  width: 5.4rem;
   height: 0.64rem;
   color: #999999;
 }
 
-.right_nav{
+.right_nav {
   display: inline-block;
   height: 100%;
   line-height: 1rem;
   text-align: center;
-  width: .94rem;
+  width: 0.94rem;
 }
 
 a.react,
@@ -111,4 +111,90 @@ label.react {
   overflow-x: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.banner_download {
+  height: 1.04rem;
+  background: #000000;
+  position: relative;
+  overflow: hidden;
+}
+
+.toAppBtn {
+  position: absolute;
+  right: 0.29rem;
+  top: 0.22rem;
+  width: 1.1rem;
+  height: 0.6rem;
+  background-image: linear-gradient(135deg, #ffd000 0%, #ffbd00 100%);
+  border-radius: 0.14rem;
+  line-height: 0.6rem;
+  text-align: center;
+}
+
+.callApp {
+  color: #000000;
+  font-size: 0.24rem;
+}
+
+.bannerItem {
+  display: flex;
+  padding: 0.16rem 0 0.16rem 0.3rem;
+  width: 3.35rem;
+  .imgBox {
+    display: block;
+    width: 0.72rem;
+    height: 0.72rem;
+  }
+  .logoTheme {
+    padding-left: 0.2rem;
+    color: #fff;
+    .logoTit {
+      font-size: 0.26rem;
+      padding-top: 0.07rem;
+    }
+    .logoDesc {
+      font-size: 0.22rem;
+      font-weight: 300;
+      padding-top: 0.07rem;
+    }
+  }
+}
+
+.listIn {
+  border-bottom: 1px solid #ddd8ce;
+  height: 4rem;
+  background-color: #ffffff;
+}
+
+.contentList {
+  overflow: hidden;
+  padding: 0;
+  .icon {
+    display: inline-block;
+    box-sizing: border-box;
+    width: 20%;
+    text-align: center;
+    > a {
+      display: block;
+      padding: 0.2rem 0;
+      .newIconCircle {
+        display: block;
+        margin: auto;
+        margin-bottom: 0.14rem;
+        width: 0.8rem;
+        height: 0.8rem;
+        border-radius: 10rem;
+        text-align: center;
+        line-height: 0.8rem;
+        font-size: 0.4rem;
+        color: #fff;
+      }
+      .iconDesc {
+        text-align: center;
+        font-size: 0.24rem;
+        color: #666;
+      }
+    }
+  }
 }
