--- a/src/global.css
+++ b/src/global.css
@@ -18,7 +18,7 @@ body {
   font-size: 0.28em;
   line-height: 1;
   color: #333;
-  background-color: #f0efed;
+  background-color: #ffffff;
 }
 
 .fade-enter {
@@ -47,7 +47,6 @@ a{
 
 p, h6 {
   line-height: 1.41;
-  text-align: justify;
   margin: -.2em 0;
   word-break: break-all;
 }
