--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -199,17 +199,21 @@ label.react {
   }
 }
 
+.Gekai {
+  height: 0.2rem;
+  background: #e5e5e5;
+}
+
 .guessLike {
   border-top: 1px solid #ddd8ce;
   border-bottom: 1px solid #ddd8ce;
-  margin-top: 0.2rem;
   margin-bottom: 0;
   background-color: #fff;
   min-height: 5rem;
   position: relative;
   .listInDl {
     opacity: 0;
-    transition: all .6s;
+    transition: all 0.6s;
     dt {
       font-size: 0.34rem;
       padding-bottom: 0.2rem;
