:tada: jwt添加完成,数据隐藏

--- a/src/pages/footer/index.less
+++ b/src/pages/footer/index.less
@@ -8,6 +8,9 @@ footer {
     padding-left: 0.3rem;
     font-size: 0.28rem;
     margin-bottom: 0.4rem;
+    .pullDemo {
+      float: none !important;
+    }
     .pullRight {
       padding-top: 0.06rem;
       float: right;
