--- a/src/pages/header/index.less
+++ b/src/pages/header/index.less
@@ -7,6 +7,52 @@
   position: relative;
   background-image: linear-gradient(135deg, #ffd000 0%, #ffbd00 100%);
   border: none;
+  .navDropDown {
+    position: absolute;
+    right: 0.04rem;
+    top: 1rem;
+    height: 2.5rem;
+    width: 2rem;
+    opacity: 1;
+    -webkit-transition: height 0.1s;
+    background: #ffffff;
+    color: #222222;
+    box-shadow: 0 0.12rem 0.6rem 0 rgba(196, 196, 196, 0.6);
+    border-radius: 0.1rem;
+    overflow: visible;
+    z-index: 100;
+    ul {
+      margin: 0;
+      padding: 0;
+      list-style-type: none;
+      a {
+        color: #222222;
+      }
+      li {
+        height: 0.83rem;
+        line-height: 0.83rem;
+        border-bottom: none;
+        text-align: center;
+        img {
+          width: 0.48rem;
+          height: 0.48rem;
+        }
+      }
+    }
+    &::after {
+      content: '';
+      background-image: url(https://p0.meituan.net/travelcube/dc0f73a6ecc53ad44da9d5bc10ceff96421.png);
+      background-size: contain;
+      display: block;
+      width: 0.38rem;
+      height: 0.12rem;
+      position: absolute;
+      top: -0.12rem;
+      right: 0.2rem;
+      box-shadow: 0 0 0 0 rgba(196, 196, 196, 0.6);
+      border-radius: 0.05rem;
+    }
+  }
   .accountSpan {
     font-family: PingFangSC-Regular;
     font-size: 0.32rem;
