:tada: 密码登录完成

--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -39,6 +39,22 @@
   -moz-flex: 1;
   -ms-flex: 1;
   flex: 1;
+  .accountPwLoginContainer {
+    .changeLoginType {
+      font-size: 0.28rem;
+      color: #222;
+      text-align: center;
+      .toggleType {
+        padding: 0.3rem 0.1rem 0.1rem 0.1rem;
+        display: inline-block;
+        cursor: pointer;
+        padding-top: 0.84rem;
+      }
+    }
+    .getMiMa {
+      color: #222222;
+    }
+  }
   .isDemoLogin {
     padding: 0.3rem 0.65rem 0 0.65rem;
     font-size: 30px;
@@ -60,7 +76,7 @@
         border: none;
         color: #666;
         cursor: pointer;
-        font-size: .4em;
+        font-size: 0.4em;
       }
       .country {
         max-width: 45%;
