--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="//p0.meituan.net/travelcube/ba8ffd9e91ba069f1d6cd352cd5b9e93803.png" type="image/x-icon">
-    <title>美团项目</title>
+    <title><%= context.route.title %></title>
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1634433_hofwdewjfi.css">
 </head>
 <body>
