:fire: 修改完成详情页面顶部

--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -43,7 +43,6 @@
 .navbarLeft {
   height: 1.01rem;
   line-height: 1.01rem;
-  
 }
 
 em {
@@ -238,6 +237,11 @@ label.react {
             text-align: center;
             overflow: hidden;
             max-width: 4rem;
+            img {
+              background-size: 100%;
+              background-color: #f0efed;
+              height: 100%;
+            }
           }
           .dealcardRight {
             margin-left: 2rem;
