--- a/src/pages/header/index.less
+++ b/src/pages/header/index.less
@@ -92,6 +92,20 @@
     width: 1.7rem;
     text-align: right;
     padding-right: 0.2rem;
+    .change {
+      width: 30px;
+      font-family: base_icon;
+      display: block;
+      vertical-align: middle;
+      font-style: normal;
+      margin: auto;
+      margin-bottom: 0.12rem;
+      font-size: 2rem;
+      right: 1rem;
+      position: absolute;
+      color: #fff;
+      z-index: 101;
+    }
     a {
       width: auto;
       padding: 0 0 0 0.2rem;
