--- a/src/pages/detail/index.less
+++ b/src/pages/detail/index.less
@@ -274,3 +274,63 @@
     }
   }
 }
+
+.con {
+  padding: 0 0 0 0.2rem;
+  a {
+    padding-right: 0.2rem;
+    padding-top: 0.1rem;
+    padding-bottom: 0.1rem;
+    display: block;
+    border-bottom: 1px solid #eeeeee;
+  }
+  .groupTitle {
+    -webkit-tap-highlight-color: transparent;
+    margin: 0;
+    padding: 0;
+    color: #333;
+  }
+  .group {
+    display: -moz-box;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    -moz-box-orient: horizontal;
+    -webkit-box-orient: horizontal;
+    -webkit-flex-direction: row;
+    flex-direction: row;
+    -moz-box-lines: single;
+    -webkit-box-lines: single;
+    box-lines: single;
+    -moz-flex-flow: row nowrap;
+    -webkit-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+    align-items: baseline;
+    padding: 0;
+    .price {
+      color: #06c1ae;
+      line-height: 0.5rem;
+    }
+    .big {
+      margin: 0;
+      margin-right: 0.1rem;
+      font-size: 0.36rem;
+      color: #06c1ae;
+    }
+    .oPrice {
+      line-height: 0.5rem;
+      color: #878787;
+      font-size: 0.2rem;
+    }
+    .sold {
+      color: #333;
+      display: block;
+      -moz-box-flex: 1;
+      -webkit-box-flex: 1;
+      -webkit-flex: 1;
+      flex: 1;
+      text-align: right;
+      font-size: 0.1rem;
+    }
+  }
+}
