--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -7,7 +7,7 @@
     <link rel="icon" href="//p0.meituan.net/travelcube/ba8ffd9e91ba069f1d6cd352cd5b9e93803.png" type="image/x-icon">
     <title><%= context.route.title %></title>
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1634433_7gtr81x58cm.css">
-    <script type="text/javascript" src="//api.map.baidu.com/api?v=3.0&ak=er00H4UhVo26Y2q8E4V3NyCRzeUkwHnr"></script>
+    <script type="text/javascript" src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
 </head>
 <body>
     <div id="root"></div>
