--- a/src/pages/header/index.less
+++ b/src/pages/header/index.less
@@ -7,6 +7,7 @@
   position: relative;
   background-image: linear-gradient(135deg, #ffd000 0%, #ffbd00 100%);
   border: none;
+  z-index: 50;
   .navDropDown {
     position: absolute;
     right: 0.04rem;
