--- a/src/pages/detail/index.less
+++ b/src/pages/detail/index.less
@@ -334,3 +334,15 @@
     }
   }
 }
+
+.guding {
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  width: 100%;
+  box-sizing: border-box;
+  box-shadow: 0 0 0.3rem 0;
+  background: #fff;
+  padding: 0 0 0 20px;
+}
