--- a/src/pages/order/index.less
+++ b/src/pages/order/index.less
@@ -1,6 +1,53 @@
 .flexBoxOrder {
   min-height: 330px;
   background-color: #f0f0f0;
+  .formMbWrapper {
+    padding-left: 0.5rem;
+    background-color: #fff;
+    margin-bottom: 0.3rem;
+    .msListLine {
+      font-size: 0.5rem;
+      line-height: 0.54rem;
+      padding: 0.26rem 0 0.28rem;
+      position: relative;
+      display: -moz-box;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: flex;
+      -moz-box-orient: horizontal;
+      -webkit-box-orient: horizontal;
+      -webkit-flex-direction: row;
+      flex-direction: row;
+      -moz-box-lines: single;
+      -webkit-box-lines: single;
+      box-lines: single;
+      -moz-flex-flow: row nowrap;
+      font-size: 0.3rem;
+      -webkit-flex-flow: row nowrap;
+      flex-flow: row nowrap;
+      border-bottom: 1px solid #eeeeee;
+      .minus {
+      }
+      .totalDetail {
+        color: #ff9712;
+      }
+      .textLight {
+        color: #999 !important;
+      }
+      .flexTwo {
+        padding-right: 0.5rem;
+        display: block;
+        -moz-box-flex: 1;
+        -webkit-box-flex: 1;
+        -webkit-flex: 1;
+        flex: 1;
+        text-align: right;
+        a {
+          color: #999 !important;
+        }
+      }
+    }
+  }
   .quickLogin {
     margin: 0.2rem;
   }
@@ -22,5 +69,29 @@
   }
   .orderRongqi {
     margin: 0.28rem 0.2rem;
+  }
+}
+
+.changeHui {
+  color: #cccccc;
+}
+
+.tags {
+  margin-left: 0.5rem;
+  ul {
+    padding: 0.04rem;
+    overflow: hidden;
+    li {
+      float: left;
+      width: 50%;
+      font-size: 0.26rem;
+      color: #6bbd00;
+      span {
+        margin-right: 5px;
+      }
+      p {
+        display: inline-block;
+      }
+    }
   }
 }
