--- a/src/pages/hot/index.less
+++ b/src/pages/hot/index.less
@@ -5,6 +5,7 @@
   background-image: linear-gradient(135deg, #ffd000 0%, #ffbd00 100%);
   border: none;
   z-index: 50;
+
   span {
     font-family: PingFangSC-Regular;
     font-size: 0.32rem;
@@ -19,5 +20,51 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+  }
+}
+
+.containerHot {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.titleMeta {
+  font-size: 14px;
+}
+
+.containerImgHot {
+  box-sizing: border-box;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  .userImg {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    .deactivateMeta {
+      width: 50px;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      margin-left: 10px;
+      color: #555;
+      font-size: 12px;
+    }
+  }
+  .likeMeta {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    .xiangYouMeta {
+      margin-left: 8px;
+      color: #555;
+      font-size: 12px;
+    }
   }
 }
