--- a/src/pages/hot/detail/index.less
+++ b/src/pages/hot/detail/index.less
@@ -122,3 +122,39 @@
     }
   }
 }
+
+.operation_block {
+  padding: 0;
+  display: flex;
+  align-items: center;
+  padding: 0 0.3rem 0.2rem;
+  ul {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+  }
+  li {
+    margin: 0 0.5rem 0 0;
+    list-style: none;
+    span {
+      width: 0.32rem;
+      height: 0.32rem;
+    }
+    strong {
+      color: #555;
+      font-size: 0.3rem;
+      vertical-align: top;
+      height: 0.4rem;
+      padding-left: 0.2rem;
+      font-weight: normal;
+    }
+  }
+}
+
+.updateTime {
+  margin-top: 0.4rem;
+  color: #999;
+  font-size: 0.26rem;
+  line-height: 0.34rem;
+}
