解决图片缓存问题

--- a/src/pages/hot/detail/index.less
+++ b/src/pages/hot/detail/index.less
@@ -127,7 +127,7 @@
   padding: 0;
   display: flex;
   align-items: center;
-  padding: 0 0.3rem 0.2rem;
+  padding: 0 0.3rem;
   ul {
     padding: 0;
     margin: 0;
@@ -157,4 +157,53 @@
   color: #999;
   font-size: 0.26rem;
   line-height: 0.34rem;
+  padding: 0 0.3rem 0.2rem;
+  span {
+    color: #999;
+    font-size: 0.26rem;
+    line-height: 0.34rem;
+  }
+}
+
+.kongxi {
+  height: 5px;
+  width: 100%;
+  background-color: #f5f8fa;
+}
+
+.allTip {
+  width: 100%;
+  font-size: 14px;
+  color: #000;
+  overflow: hidden;
+  padding: 0.2rem 0.3rem 0.1rem;
+  box-sizing: border-box;
+  .nocoment {
+    text-align: center;
+    padding: 10px 0 0;
+    .smallpic {
+      width: 140px;
+      height: 100px;
+    }
+    .remain {
+      color: #999;
+      font-weight: 300;
+      margin: 10px 0 30px;
+    }
+  }
+  .top {
+    font-size: 16px;
+    margin: 0 0 20px;
+    .remain {
+      width: 5px;
+      height: 16px;
+      display: inline-block;
+      background: #ff2442;
+      vertical-align: middle;
+      margin: 0 7px 0 0;
+    }
+    .brief {
+      vertical-align: middle;
+    }
+  }
 }
