--- a/src/pages/account/quans/index.less
+++ b/src/pages/account/quans/index.less
@@ -77,11 +77,26 @@
 
 .moneycard_disabled {
   .moneycard_desc {
-    p,h6 {
+    p,
+    h6 {
       color: #999 !important;
     }
   }
   .moneycard_value {
     background-color: #dfdfdf !important;
+  }
+}
+
+// help
+.dd_container {
+  padding: 0.4rem 0.3rem 0.3rem 0.3rem;
+  font-family: PingFangSC-Regular;
+  font-size: 0.26rem;
+  color: #555555;
+  letter-spacing: 0;
+  text-align: justify;
+  line-height: 0.4rem;
+  p {
+    padding: 0.2rem 0;
   }
 }
