--- a/src/global.css
+++ b/src/global.css
@@ -36,25 +36,36 @@ img {
   border: 0;
 }
 
-
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: content-box;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
-p, h6 {
+p,
+h6 {
   line-height: 1.41;
-  margin: -.2em 0;
+  margin: -0.2em 0;
   word-break: break-all;
 }
 
-dd,dl{
+dd,
+dl {
   margin: 0;
 }
 
-li{
+li {
   list-style: none;
+}
+
+.am-list-item .am-list-line .am-list-brief {
+  font-size: 12px !important;
+}
+
+.am-list-item .am-list-line .am-list-content {
+  font-size: 14px !important;
 }
