--- a/src/pages/liao/index.less
+++ b/src/pages/liao/index.less
@@ -5,7 +5,7 @@
   color: #ff2442;
   background-color: #fff;
   width: 1.12rem;
-  height: .5rem;
-  font-size: .26rem;
+  height: 0.5rem;
+  font-size: 0.26rem;
   cursor: pointer;
 }
