--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" href="//p0.meituan.net/travelcube/ba8ffd9e91ba069f1d6cd352cd5b9e93803.png" type="image/x-icon">
-    <title><%= context.route.title %></title>
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1634433_yd4lhww87s.css">
-    <script type="text/javascript" src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" href="//p0.meituan.net/travelcube/ba8ffd9e91ba069f1d6cd352cd5b9e93803.png" type="image/x-icon">
+  <title><%= context.route.title %></title>
+  <link rel="stylesheet" href="//at.alicdn.com/t/font_1634433_pimxfxgc5yn.css">
+  <script type="text/javascript" src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
 </head>
+
 <body>
-    <div id="root"></div>
+  <div id="root"></div>
 </body>
+
 </html>
