--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -180,3 +180,25 @@
   background-image: linear-gradient(-133deg, #ffbd00 0%, #ffd000 100%);
   color: #000000;
 }
+
+.container {
+  display: flex;
+  margin-top: 1rem;
+  justify-content: center;
+}
+
+.three_list {
+  margin-right: 0.5rem;
+  span {
+    font-size: 0.75rem;
+  }
+}
+.kongMargin {
+  margin-right: 0;
+}
+.bianLan {
+  color: rgb(76, 175, 233);
+}
+.bianLv {
+  color: rgb(76, 191, 0);
+}
