--- a/src/pages/header/index.less
+++ b/src/pages/header/index.less
@@ -111,7 +111,7 @@
       color: #fff;
       z-index: 101;
     }
-    a {
+    > div {
       width: auto;
       padding: 0 0 0 0.2rem;
       display: inline-block;
